# autorial

./: .gitignore  AGENTS.md  README.md  config.ini  main.py  pyproject.toml
modules/: __init__.py
modules/combine/: AGENTS.md  __init__.py  __main__.py  processor.py
modules/config/: __init__.py
modules/hash/: AGENTS.md  __init__.py  __main__.py  processor.py
modules/markdown/: AGENTS.md  __init__.py  __main__.py  processor.py
modules/selection/: AGENTS.md  __init__.py  __main__.py  processor.py
modules/speech/: AGENTS.md  __init__.py  __main__.py  processor.py
modules/topics/: AGENTS.md  __init__.py  __main__.py  processor.py
vocab/: keycloak_ldap.txt
